fix scroll on safari

--- a/styles/global.css
+++ b/styles/global.css
@@ -17,6 +17,16 @@
 html,
 body {
   height: 100%;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  line-height: 1.3;
+  letter-spacing: 0.5px;
+  font-family: Pretendard-Regular;
+}
+
+html.snapp,
+body.snapp {
+  height: 100%;
   overflow-x: hidden;
   /* overflow-y: hidden; */
   -ms-overflow-style: none;
